--- a/bildgalleri.html
+++ b/bildgalleri.html
@@ -31,13 +31,11 @@
 		</div>
 
 		<div class="text_size_container baloo">
-			<p>Textstorlek</p>
-
+			Textstorlek
 			<div class="button_container">
-				<button title="kommer fungera sen med javascript"> + </button>
-				<button title="kommer fungera sen med javascript"> - </button>
+				<button id="plus"> + </button>
+				<button id="minus"> - </button>
 			</div>
-
 		</div>
 	</nav>
 
@@ -77,9 +75,9 @@
 			<div class="footer_textbox baloo2">
 				<h3 class="baloo yellow"><strong>ÖPPETTIDER</strong></h3>
 				<ul class="white">
-					<li data-day="1,2,3,4">Mån - Tors &nbsp; &nbsp; &nbsp;10:30-20:00  <span class="arrow"><h5>&#8592;</h5></span>&nbsp;</li>
-					<li data-day="5"> Fre &nbsp; &nbsp; &nbsp; 10:00 - 20:00 <span class="arrow"><h5>&#8592;</h5></span>&nbsp;</li>
-					<li data-day="6,0"> Lör - Sön &nbsp; &nbsp; &nbsp; 12:00 - 20:00 <span class="arrow"><h5>&#8592;</h5></span>&nbsp; </li>
+					<li data-day="1,2,3,4">Mån - Tors &nbsp; &nbsp; &nbsp;10:30-20:00  <span class="red_dot"></span>&nbsp;</li>
+					<li data-day="5"> Fre &nbsp; &nbsp; &nbsp; 10:00 - 20:00 <span class="red_dot"> </span>&nbsp;</li>
+					<li data-day="6,0"> Lör - Sön &nbsp; &nbsp; &nbsp; 12:00 - 20:00 <span class="red_dot"> </span>&nbsp; </li>
 				</ul>
 			</div>
 
