--- a/index.html
+++ b/index.html
@@ -31,13 +31,11 @@
 		</div>
 
 		<div class="text_size_container baloo">
-			<p>Textstorlek</p>
-
+			Textstorlek
 			<div class="button_container">
-				<button title="kommer fungera sen med javascript"> + </button>
-				<button title="kommer fungera sen med javascript"> - </button>
+				<button id="plus"> + </button>
+				<button id="minus"> - </button>
 			</div>
-
 		</div>
 	</nav>
 
@@ -52,7 +50,7 @@
 			<a href="kontaktaoss.html" class="Button baloo">Kontakta oss här</a>
 		</div>
 	</div>
-	<div class="home_meny_container">
+	<div class="home_meny_container" id="changable">
 		<div class="pizza_container">
 			<div class="pizza_text_container">
 				<h3 class="yellow baloo text_shadow">PIZZOR</h3>
@@ -107,7 +105,6 @@
 			<a href="table.html"><h2>Hittade inget bra ställe att lägga in en tabell så visar det här</h2></a>
 		</div>
 	</div>
-
 	<footer>
 		<div class="logo_footer">
 			<img src="img/logo.png" height="55" alt="logo">
@@ -116,9 +113,9 @@
 			<div class="footer_textbox baloo2">
 				<h3 class="baloo yellow"><strong>ÖPPETTIDER</strong></h3>
 				<ul class="white">
-					<li data-day="1,2,3,4">Mån - Tors &nbsp; &nbsp; &nbsp;10:30-20:00  <span class="arrow"><h5>&#8592;</h5></span>&nbsp;</li>
-					<li data-day="5"> Fre &nbsp; &nbsp; &nbsp; 10:00 - 20:00 <span class="arrow"><h5>&#8592;</h5></span>&nbsp;</li>
-					<li data-day="6,0"> Lör - Sön &nbsp; &nbsp; &nbsp; 12:00 - 20:00 <span class="arrow"><h5>&#8592;</h5></span>&nbsp; </li>
+					<li data-day="1,2,3,4">Mån - Tors &nbsp; &nbsp; &nbsp;10:30-20:00  <span class="red_dot"></span>&nbsp;</li>
+					<li data-day="5"> Fre &nbsp; &nbsp; &nbsp; 10:00 - 20:00 <span class="red_dot"> </span>&nbsp;</li>
+					<li data-day="6,0"> Lör - Sön &nbsp; &nbsp; &nbsp; 12:00 - 20:00 <span class="red_dot"> </span>&nbsp; </li>
 				</ul>
 			</div>
 
