--- a/avhämtning.html
+++ b/avhämtning.html
@@ -10,6 +10,7 @@
 	<meta name="description" content="Gammlia pizzerias avhämtning">
 	<meta name="keywords" content="Gammlia pizzeria avhämtning">
 	<script src="script.js" defer></script>
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 </head>
 
@@ -36,6 +37,7 @@
 			<div class="button_container">
 				<button id="plus"> + </button>
 				<button id="minus"> - </button>
+				<button id="reset">Återställ</button>
 			</div>
 		</div>
 	</nav>
@@ -70,6 +72,7 @@
             <img src="img/avhämtning/image4.png" alt="pizza">
         </div>
     </div>
+	<div id="scroll_top" class="baloo review_gray box_shadow">Skrolla längst upp</div>
 
 	<footer>
 		<div class="logo_footer">
