--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<meta name="description" content="Gammlia pizzerias hemsida">
 	<meta name="keywords" content="Gammlia pizzeria">
 	<script src="script.js" defer></script>
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 
 <body>
@@ -35,6 +36,7 @@
 			<div class="button_container">
 				<button id="plus"> + </button>
 				<button id="minus"> - </button>
+				<button id="reset">Återställ</button>
 			</div>
 		</div>
 	</nav>
@@ -105,6 +107,7 @@
 			<a href="table.html"><h2>Hittade inget bra ställe att lägga in en tabell så visar det här</h2></a>
 		</div>
 	</div>
+	<div id="scroll_top" class="baloo review_gray box_shadow">Skrolla längst upp</div>
 	<footer>
 		<div class="logo_footer">
 			<img src="img/logo.png" height="55" alt="logo">
