--- a/lunch.html
+++ b/lunch.html
@@ -10,6 +10,7 @@
 	<meta name="description" content="Gammlia pizzerias lunch">
 	<meta name="keywords" content="Gammlia pizzeria lunch">
 	<script src="script.js" defer></script>
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 
 <body>
@@ -35,6 +36,7 @@
 			<div class="button_container">
 				<button id="plus"> + </button>
 				<button id="minus"> - </button>
+				<button id="reset">Återställ</button>
 			</div>
 		</div>
 	</nav>
@@ -62,8 +64,8 @@
 				src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3519.5742624391737!2d20.281769278234194!3d63.827861277096375!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x467c5b1ac1242971%3A0x54d8d4fc73c0247e!2sPizzeria%20Gammlia!5e0!3m2!1ssv!2sse!4v1739119421297!5m2!1ssv!2sse"
 				width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
 				referrerpolicy="no-referrer-when-downgrade"></iframe>
-
 		</div>
+		<div id="scroll_top" class="baloo review_gray box_shadow">Skrolla längst upp</div>
 
 		<footer>
 			<div class="logo_footer">
