--- a/meny.html
+++ b/meny.html
@@ -12,6 +12,7 @@
 	<meta name="keywords" content="Gammlia pizzeria meny">
 	<script src="script.js" defer></script>
 	<script src="pizzamaker.js" defer></script>
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 
 <body>
@@ -37,6 +38,7 @@
 			<div class="button_container">
 				<button id="plus"> + </button>
 				<button id="minus"> - </button>
+				<button id="reset">Återställ</button>
 			</div>
 		</div>
 	</nav>
@@ -341,6 +343,7 @@
 		<div class="meny_divider box_shadow green_fade"></div>
 
 	</div>
+	<div id="scroll_top" class="baloo review_gray box_shadow">Skrolla längst upp</div>
 
 	<footer>
 		<div class="logo_footer">
