--- a/recensioner.html
+++ b/recensioner.html
@@ -10,6 +10,7 @@
 	<meta name="description" content="Gammlia pizzerias recensioner">
 	<meta name="keywords" content="Gammlia pizzeria recensioner">
 	<script src="script.js" defer></script>
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 
 <body>
@@ -35,6 +36,7 @@
 			<div class="button_container">
 				<button id="plus"> + </button>
 				<button id="minus"> - </button>
+				<button id="reset">Återställ</button>
 			</div>
 		</div>
 	</nav>
@@ -75,6 +77,7 @@
 			<img src="img/Recension1.png" alt="recension example image">
 			<img src="img/Recension1.png" alt="recension example image">
 		</div>
+		<div id="scroll_top" class="baloo review_gray box_shadow">Skrolla längst upp</div>
 
 		<footer>
 			<div class="logo_footer">
